<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_board_menu">BoardMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="loginGuest">Guest</string>

    <string name="chat_name">Scaledrone chat</string>
    <string name="input_placeholder">Write a message</string>
    <string name="title_activity_inbox">Inbox</string>

    <string name="add_advertisement">Add advertisement</string>
    <string name="source_coin">Source Coin</string>
    <string name="destination_coin">Destination Coin</string>
    <string name="location_adver">Location</string>
    <string name="amount">Amount</string>
    <string name="add_advertisement_Btn">Add</string>

    <string name="filter">Filter</string>
    <string name="modify_advertisement">Modify advertisement</string>
    <string name="modify_advertisement_Btn">Modify</string>

    <string name="private_zone">Private Zone</string>logout
    <string name="logout">Logout</string>

    <string name="delete_Btn">Delete</string>




</resources>